# RocketSimulator

./: .configure  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  azure-pipelines.yml  build.sh  cmake_install.cmake  configure.sh
.github/workflows/: c-cpp.yml
2DMap/: CMakeLists.txt
2DMap/src/: map.cc
2DMap/tests/: CMakeLists.txt
2DMap/tests/src/: TestMapWrapper.cpp
Algorithm/: CMakeLists.txt  Makefile  buildScript.sh
Algorithm/include/: Interface.h  Interface_set.h  Rocket.h
Algorithm/src/: AlgorithmTry.cpp  Interface.cpp  Interface_set.cpp  Makefile  Rocket.cpp  Rocket.h  Thrust.cpp  Thrust.h  World.cpp  World.h  main.cc  main.cpp
Console/: .classpath  .project  ConsoleDataStructure.py  CoreGUI.py  EchoHandler.py  GUI.py  Graphics.py  SocketSender.py  TerrainMissionParameters.py  TestSocketSender.py  buildComponent.sh  log.txt  logStyleChecker.txt  main.py  runScript.sh  runStyleChecker.sh
Console/src/com/: GUI.java
Controller/: CMakeLists.txt  buildScript.sh  runScript.sh
Documents/: Architecture.gdraw  Interface Requirements.gdoc  Interface Requirements.txt  README.md  Requirements.docx  Rocket-Graph.csv  Rocket-Graph.xlsx  RocketSimulator Definition.gsheet  Statechart.drawio  Statechart_Drawing.drawio  ~$Rocket-Graph.xlsx
Flight_Algorithm/: CMakeLists.txt
Flight_Algorithm/include/: Flight_Algorithm.h  Rocket.h  World.h
Flight_Algorithm/src/: flight_algorithm.cc  rocket.cc  thrust.cc  world.cc
Flight_Algorithm/tests/: CMakeLists.txt  CMakeLists.txt.in
Form/: CMakeLists.txt
Form/src/: window.cpp
Game/include/: rocket.h
Graphics/: buildComponent.sh  buildScript.sh  runScript.sh
Graphics/nbproject/: project.properties
Graphics/nbproject/private/: private.xml
Land_Algorithm/: CMakeLists.txt
Land_Algorithm/include/: Land_Algorithm.h
Land_Algorithm/src/: land_algorithm.cc
Land_Algorithm/tests/: CMakeLists.txt
Land_Algorithm/tests/src/: TestAlgorithmWrapper.cpp
SecondaryList/src/: main.cs
Simulator/: CMakeLists.txt
Simulator/include/: config.h  engine.h  init.h  rocket.h  simulator.h  spaceship.h
Simulator/src/: config.cc  engine.cc  init.cc  main.cc  rocket.cc  simulator.cc  spaceship.cc
Software/: CMakeLists.txt  README.md  build_all.sh  clean_all.sh  data.csv  ship.txt  ship_after.txt
Software/2DMap/: CMakeLists.txt
Software/2DMap/include/: map.h
Software/2DMap/src/: map.cc
Software/2DMap/tests/: CMakeLists.txt
Software/Algorithm/: .cproject  CMakeLists.txt  build.sh
Software/Algorithm/include/: Algorithm.h  Rocket.h  Thrust.h  World.h
Software/Algorithm/src/: .project  Algorithm.cpp  Rocket.cpp  Thrust.cpp  World.cpp  algorithm.cc  main.cpp  rocket.cc  thrust.cc
Software/Algorithm/tests/: CMakeLists.txt  CMakeLists.txt.in
Software/Algorithm/tests/src/: TestAlgorithmWrapper.cpp
Software/Console/: .coverage  Console.py  Console.pyproj  Console.sln  ConsoleDataStructure.py  CoreGUI.py  EchoHandler.py  EchoHandler2.py  EchoHandler3.py  EchoHandler4.py  EchoHandler5.py  GUI.py  SocketSender.py  TestConsoleWrapper.py  TestSocketSender.py  exeConsole.spec  help.txt  main.py
Software/Controller/: .cproject  .project  CMakeLists.txt
Software/Controller/config/: use.conf
Software/Controller/include/: Algorithm_Interface.h  Socket.h  config_reader.h  interface.h
Software/Controller/src/: Algorithm_Interface.cpp  Config_Reader.cpp  Controller.cpp  Sockets.cpp  config_reader.cc  data_structure.cc  interface.cc  main.cc  main.cpp  socket.cc  socket.cpp  use.conf
Software/Controller/tests/: CMakeLists.txt
Software/Controller/tests/include/mocks/: Mock_Socket.h
Software/Controller/tests/src/: TestControllerWrapper.cpp  TestInterfaceWrapper.cc
Software/Flight_Algorithm/: CMakeLists.txt
Software/Flight_Algorithm/include/: Flight_Algorithm.h  Thrust.h
Software/Flight_Algorithm/src/: flight_algorithm.cc  rocket.cc  thrust.cc  world.cc
Software/Flight_Algorithm/tests/: CMakeLists.txt  CMakeLists.txt.in
Software/Game/: CMakeLists.txt
Software/Game/src/: init.cpp  main.cpp
Software/Graphics/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Software/Graphics/include/: Ball.h  graphics.h  ship.h
Software/Graphics/src/: Ball.cpp  Graphics.cpp  graphics.cc  sfml-app
Software/Land_Algorithm/: CMakeLists.txt
Software/Land_Algorithm/include/: Algorithm.h  Land_Algorithm.h
Software/Land_Algorithm/src/: land_algorithm.cc
Software/Land_Algorithm/tests/: CMakeLists.txt
Software/Simulation/: CMakeLists.txt  data.csv
Software/Simulation/Simulator/: manifest.mf  pom.xml
Software/Simulation/include/: simulation.h
Software/Simulation/src/: simulation.cc
Software/Stubs/: socket.cc
Software/TestAlgorithmWrapper/: .cproject  CMakeLists.txt  build.sh
Software/TestAlgorithmWrapper/src/: TestAlgorithmWrapper.cpp  Tests.cpp  Tests.h
Software/TestConsoleWrapper/: .cproject  .project
Software/TestConsoleWrapper/src/: TestConsoleWrapper.cpp
Software/TestControllerWrapper/: .cproject  .project
Software/TestControllerWrapper/src/: TestControllerWrapper.cpp
Software/Threads_Test/: Test1.cc  Test2.cc  exeTest1  exeTest2
Software/Zero/: zmq.hpp
Software/allegro_dev/: exeTest  main.cc
Software/common/: buffer.h  dataStructure.h  data_structure.h  logging.h  project_types.h  socket.cc  socket.h  start_up_process.cc
Software/common/include/: data_structure.h  socket.h
Software/scripts/: setEnv.sh
Stubs/: socket.cc
TestAlgorithmWrapper/: .cproject  .project  CMakeLists.txt  buildScript.sh  runScript.sh
TestAlgorithmWrapper/src/: main.cpp
TestConsoleWrapper/: main.py  runScript.sh
TestControllerWrapper/: CMakeLists.txt  buildScript.sh  runScript.sh
TestGraphicsWrapper/: runScript.sh
common/: dataStructure.h  data_structure.h  logging.h  socket.cc  socket.h  start_up_process.h
include/: interface.h
pipeline_attempts/: azure-pipelines.yml
scripts/: setEnv.sh  styleChecker.sh
src/: interface.cc  main.cc
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/src/: TestControllerWrapper.cc  TestInterface.cc
(+9 files in other folders)
